--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -15,8 +15,9 @@
 
 .navbar-center {
   display: flex;
-  flex: 0 0;
+  // flex: 0 0;
   justify-content: center;
+  align-items: center;
 }
 
 .mat-button {
@@ -27,16 +28,3 @@
   flex-grow: 1;
 }
 
-// .sidenav-container {
-//   display: flex;
-//   flex-direction: column;
-//   position: relative;
-//   top: 0;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-// }
-
-// .mat-sidenav-container {
-//   flex: 1 0 auto;
-// }
