--- a/src/app/modules/dashboard/components/file-actions/file-actions.component.html
+++ b/src/app/modules/dashboard/components/file-actions/file-actions.component.html
@@ -70,7 +70,7 @@
             <mat-icon class="m-icon" color="primary">cloud_download</mat-icon>
             <span *ngIf="isSM">Download</span>
         </button>
-        <button mat-button (click)="renameAction()">
+        <button mat-button (click)="renameAction(row)">
             <mat-icon class="m-icon" color="primary">text_format</mat-icon>
             <span *ngIf="isSM">Rename</span>
         </button>
