--- a/src/app/modules/notifications/pages/notifications/notifications.component.less
+++ b/src/app/modules/notifications/pages/notifications/notifications.component.less
@@ -1,31 +1,78 @@
-.notification {
-    height: 80px;
-    width: 250px;
+.notifications-container {
+    // display: flex;
+    // flex-direction: column;
+    height: 100%;
+    overflow-y: hidden;
 }
 
-.row {
-    overflow-x: hidden;
+.notifications {
+    height: 92%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
+.notification-items {
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+
+}
+
+.notification {
+    height: auto;
+    width: 225px;
+    overflow-x: hidden;
+    display: flex;
+    
+}
+
+.notification-icon {
+    align-self: flex-start;
+}
+
 
 .no-new-notification {
     display: flex;
     align-content: center;
     justify-content: center;
-    // height: 50px;
-}
-
-.notification-container {
-    overflow-y: scroll;
 }
 
 .notification-actions {
-    position: sticky;
-    bottom: 0;
+    display: flex;
+    height: auto;
+    width: auto;
+    justify-content: space-evenly;
+    align-items: center;
     background-color: white;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
     margin-top: 10px;
+    // align-items: flex-end;
+
 }
 
-.container-fluid {
-    max-height: 600px;
+.notification-heading {
+    margin: 10px 10px;
+    height: 4%;
+}
+
+.notification-divider {
+    margin: 0 8px;
+}
+
+.heading-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px
+}
+
+h4.heading-title {
+    margin-bottom: 0;
+}
+
+.close-notifications {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
