--- a/src/app/modules/upload-file/components/upload-progress/upload-progress.component.html
+++ b/src/app/modules/upload-file/components/upload-progress/upload-progress.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid px-0">
-    <div class="row" *ngIf="(viewState$ | async) as viewState">
+    <div class="row" *ngIf="(viewState$ | async)">
         <div class="col-auto">
             <button mat-button class="px-0" (click)="viewDetails()">View details</button>
         </div>
