--- a/src/app/modules/dashboard/components/repository/repository.component.html
+++ b/src/app/modules/dashboard/components/repository/repository.component.html
@@ -158,8 +158,8 @@
   
     <!-- Date Created Column -->
     <ng-container matColumnDef="createdDate">
-      <th mat-header-cell mat-sort-header arrowPosition="before" class="text-left" *matHeaderCellDef showColumn [showContent]="isXS">Date Created</th>
-      <td mat-cell *matCellDef="let row" showColumn [showContent]="isXS">{{ row.CreatedOn | date : "short" }}</td>
+      <th mat-header-cell mat-sort-header arrowPosition="before" class="text-left" *matHeaderCellDef>Date Created</th>
+      <td mat-cell *matCellDef="let row">{{ row.CreatedOn | date : "short" }}</td>
     </ng-container>
   
     <!-- Members Column -->
@@ -214,8 +214,6 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getFolderContents(row)"></tr>
   
   </table>
-  <!-- <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]"></mat-paginator>  -->
-  <!-- [length]="resultsLength" [pageSize]="30" -->
 </ng-template>
 
 
