--- a/src/app/modules/notifications/pages/notifications/notifications.component.less
+++ b/src/app/modules/notifications/pages/notifications/notifications.component.less
@@ -55,6 +55,9 @@
     margin: 10px 10px;
     height: 4%;
     background-color: rgba(255, 255, 255, 0.7);
+    padding-bottom: 10px;
+    border-bottom: 1px solid darkgrey;
+    
 }
 
 .notification-content {
